OOFSWIG/Tests/Errors/missing_header.i
%module test

double foobar(double,int);
int My_variable;

